project controller connected with user entity